UI : Fix possible animations lock      Started work on awards/milestones progress (hidden from now) /!\ update TPL      Added tooltips to corp images      Put custom payment behind 'Custom' button (displays first)      Set Marker on a map Hex (no tile) to the middle position      Changed Hand symbol in mini panel

--- a/src/css/GameTokens.scss
+++ b/src/css/GameTokens.scss
@@ -111,6 +111,11 @@
   position: absolute;
 }
 
+.hex > .marker {
+  left: 28%;
+  top: 24%;
+}
+
 .player_area .marker {
   position: absolute;
   width: calc(var(--card-width) * 0.045 * 3.5 );
